--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asyncio>=3.4.3
 requests>=2.26.0
 prometheus_client>=0.11.0
-pytest>=6.2.5
+pytest>=7.0.0
+pytest-asyncio>=0.18.0
+pytest-cov>=3.0.0
+PyYAML>=6.0
+colorama>=0.4.4
